--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
-    "next": "14.1.0",
+    "next": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
